# Stocks

./: .gitignore  install.sh  pyproject.toml  rsync.sh
data/: good_companies.txt  nasdaqtop100.txt  tinkoff_list.txt
src/: analyze_result.py  analyzer.py  cache.py  history_metrics.py  main.py  sender.py  stock_history.py  stock_history_reader.py  telegram_bot.py
src/api/: fmg_api.py  tinkoff_api.py
src/test/: find_new_reports_SP500.py  test.py  tinkoff.py  yahoo_finance.py
